# rawket

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: debian_http.c  dhcp.c  dhcp.h  dns.c  dns.h  echo_server.c  http.c  http.h
include/: rawket.h
src/: af_packet.rs  arp.rs  arp_cache.rs  bridge.rs  eth.rs  ffi.rs  filter.rs  icmp.rs  interface.rs  ip.rs  lib.rs  network.rs  packet_socket.rs  raw_socket.rs  tcp.rs  timers.rs  udp.rs  virtual_link.rs
tests/system/: assert.rs  capture.rs  harness.rs  mod.rs  packet.rs
tests/system/tcp/: bbr.rs  checksum.rs  ecn.rs  fast_retransmit.rs  isn.rs  keepalive.rs  mod.rs  mss.rs  ooo.rs  pacing.rs  persist.rs  rack_tlp.rs  recv_buf.rs  rto_rtt.rs  sack.rs  send_buf.rs  state_machine.rs  teardown.rs  timestamps_paws.rs  window_scaling.rs
