[package]
name = "rawket"
version = "0.1.0"
edition = "2021"
description = "Tiny no_std IP stack for Linux via AF_PACKET / TPACKET_V2 with C FFI"
license = "MIT"

[lib]
name = "rawket"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = { version = "0.2", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = "s"
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
