[package]
name = "rawket"
version = "0.1.0"
edition = "2021"
description = "Tiny no_std IP stack for Linux via AF_PACKET / TPACKET_V2 with C FFI"
license = "MIT"

[lib]
name = "rawket"
crate-type = ["staticlib", "rlib"]

[features]
default = ["std"]
# Enable the Rust standard library (on by default).
#
# With this feature on rawket is a normal std crate: the allocator and
# panic handler come from the Rust runtime, and the library can be used
# as a regular Rust dependency.
#
# With this feature off (--no-default-features) rawket is a self-contained
# no_std crate: it supplies its own #[global_allocator] (libc malloc) and
# #[panic_handler] (abort), and must be linked with musl or another
# freestanding libc.  Intended for the standalone C library build.
std = []
# Expose internal TcpSocket fields via accessor methods.  Intended for
# system-test-validator; never enabled in production builds.
test-internals = ["std", "dep:etherparse"]

[dependencies]
libc = { version = "0.2", default-features = false }
etherparse = { version = "0.19", optional = true }

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = "s"
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
